feat(go-api): add crud to subscriber
